--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=pickplace
-openai.api.key=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
+openai.api.key=secret
 server.port=8080
